--- a/angularapp1/src/app/login/login.component.html
+++ b/angularapp1/src/app/login/login.component.html
@@ -1,28 +1,61 @@
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik:400,700'>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link rel="stylesheet" href="./login.component.css">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>School Admission</title>
+  </head>
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Rubik:400,700"
+  />
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous"
+  />
+  <link rel="stylesheet" href="./login.component.css" />
 
-<body>
-    <div class="login1">
+  <body>
+    <div class="main">
+      <div class="navbar">
+        <div class="icon">
+          <h2 class="logo">School Admission</h2>
+        </div>
 
+        <div class="menu">
+          <ul>
+            <li>
+              <button (click)="homepage()" id="redirectHome">HOME</button>
+            </li>
+            <li>
+              <button (click)="signuppage()" id="redirectSignup">
+                REGISTER
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="login1">
         <form>
-            <h1>Login</h1>
+          <h1>Login</h1>
 
-            <div class="content">
-                <div class="cred">
-                    <input type="email" placeholder="Email ID">
-                </div>
-
-                <div class="cred">
-                    <input type="password" placeholder="Password">
-                </div>
+          <div class="content">
+            <div class="cred">
+              <input type="email" placeholder="Email ID" />
             </div>
 
             <div class="cred">
-                <button (click)="loginfunc()" type="button" class="btn btn-success">Sign In</button>
+              <input type="password" placeholder="Password" />
             </div>
+          </div>
 
+          <div class="cred">
+            <button (click)="loginfunc()" type="button" class="btn btn-success">
+              Sign In
+            </button>
+          </div>
         </form>
+      </div>
     </div>
-</body>
+  </body>
+</html>
