--- a/angularapp1/src/app/signup/signup.component.html
+++ b/angularapp1/src/app/signup/signup.component.html
@@ -35,8 +35,9 @@
       </div>
       <div id="registerbox">
         <h1>Register</h1>
-        <form>
-          <div id="select">
+        <form (ngSubmit)="onSubmit()">
+          <div id="select"
+          [(ngModel)] = "user.userRole">
             <select id="adminoruser">
               <option value="" disabled selected>Enter Admin/User</option>
               <option value="admin">Admin</option>
@@ -44,19 +45,23 @@
             </select>
           </div>
           <div id="email">
-            <input type="email" placeholder="Enter Mail ID" required />
+            <input type="email" placeholder="Enter Mail ID" required
+            [(ngModel)] = "user.email" />
           </div>
 
           <div id="username">
-            <input type="text" placeholder="Username" required />
+            <input type="text" placeholder="Username" required
+            [(ngModel)] = "user.username" />
           </div>
 
           <div id="mobileNumber">
-            <input type="number" placeholder="Enter Mobile Number" required />
+            <input type="number" placeholder="Enter Mobile Number" required 
+            [(ngModel)] = "user.mobileNumber"/>
           </div>
 
           <div id="password">
-            <input type="password" placeholder="Enter Password" required />
+            <input type="password" placeholder="Enter Password" required 
+            [(ngModel)] = "user.password" />
           </div>
 
           <div id="confirmPassword">
