login serive and backend part created

--- a/angularapp1/src/app/login/login.component.html
+++ b/angularapp1/src/app/login/login.component.html
@@ -41,11 +41,13 @@
 
           <div class="content">
             <div class="cred">
-              <input type="email" placeholder="Email ID" />
+              <input type="email" placeholder="Email ID"
+              [(ngModel)]="login.email" name = "email" />
             </div>
 
             <div class="cred">
-              <input type="password" placeholder="Password" />
+              <input type="password" placeholder="Password"
+              [(ngModel)] = "login.password" name="password" />
             </div>
           </div>
 
