--- a/angularapp1/src/app/login/login.component.html
+++ b/angularapp1/src/app/login/login.component.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="cred">
-              <input type="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+              <input type="password" placeholder="Password"
               [(ngModel)] = "login.password" name="password" />
             </div>
           </div>
