Validation part modified

--- a/angularapp1/src/app/signup/signup.component.html
+++ b/angularapp1/src/app/signup/signup.component.html
@@ -39,7 +39,9 @@
           <label>
             <input type="radio" [(ngModel)]="user.userRole" name="userRole" value="admin">
             Admin
-          </label> <br/><label>
+          </label>
+          
+          <label>
             <input type="radio" [(ngModel)]="user.userRole" name="userRole" value="User">
             User
           </label><br/>
