--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -8,7 +8,6 @@
 </div>
 
 <div class="search"  id="searchButton">
-   
       <input type="text" name="search" class='search-box' placeholder="Type here to search academy"/>
       <input type="submit" class="search-txt" value="Search" /><br />
     
@@ -26,7 +25,7 @@
 </div>
 <div class="team-member" id="userInstituteGrid2">
   <div class="image-wrapper">
-      <img class="img-fluid" src="https://i.pinimg.com/600x315/09/9a/85/099a8583e75cfa7da88c4b8ae166376c.jpg" alt="alternative">
+      <img class="img-fluid" src="https://www.aceec.ac.in/wp-content/uploads/2020/12/ACE-Engineering-CollegeA-Block-1109x500-1.jpg" alt="alternative">
   </div>
   <p class="p-large">Sk Institute</p>
   <p class="job-title">Place: Banglore</p>
