course,addcourse,updatecourse pages added

--- a/angularapp1/src/app/institute/institute.component.html
+++ b/angularapp1/src/app/institute/institute.component.html
@@ -102,7 +102,7 @@
   <br>
   <br>
   <div class="button">
-  <button class="glyphicon glyphicon-plus-sign btn btn-success"  routerLink="/academy" style="border-radius: 12px; background-color: green;">Add Institute</button>
+  <button class="glyphicon glyphicon-plus-sign btn btn-success"   style="border-radius: 12px; background-color: green;" routerLink="/addacademy">Add Institute</button>
   </div>
   </div>
   
