--- a/angularapp1/src/app/addcourse/addcourse.component.html
+++ b/angularapp1/src/app/addcourse/addcourse.component.html
@@ -12,7 +12,7 @@
 <form action="" id="addCourse" style="margin-top: 4em; ">
   <div style="margin-bottom: 6em; margin-left: 2em;">
   <input type="text" id="courseName" placeholder="Enter the course Name" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 20em;">
-  <input type="text" id="contactEnrolled" placeholder="Enter no of student enrolled for the course" style="background-color: lightgrey; padding: 1em; width: 20em; margin-left: 40em;"><br>
+  <input type="text" id="courseEnrolled" placeholder="Enter no of student enrolled for the course" style="background-color: lightgrey; padding: 1em; width: 20em; margin-left: 40em;"><br>
   </div>
   <div style="margin-bottom: 6em; margin-left: 2em;">
   <input type="text" id="courseDuration" placeholder="Enter the course Duration" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 20em">
