--- a/angularapp1/src/app/updatestudent/updatestudent.component.html
+++ b/angularapp1/src/app/updatestudent/updatestudent.component.html
@@ -10,7 +10,7 @@
 </nav>
 <div style="background-color: gray; height: 100vh;">
     
-    <h5 style="padding-top: 1em; text-align: center; color: white;" >Add Student</h5>
+    <h5 style="padding-top: 1em; text-align: center; color: white;" >Update Student</h5>
     <form action="" id="addCourse" style="margin-top: 4em; ">
       <div style="margin-bottom: 6em; margin-left: 3em;">
       <input type="text" id="firstName" placeholder="enter your first name" style="margin-right: 30em; background-color: white; padding: 1em; width: 20em;">
@@ -50,13 +50,12 @@
             <label for="nationality">Nationality :</label>
             <input type="text" id="nationality" style="background-color: white; padding: 0.5em; margin-left: 2em;">
             </div>
-
         </div>
     </div>
-    <input type="button"  id="addStudent" value="Add Student" style="border-radius: 12px; background-color: forestgreen; padding: 0.5em; color: white; margin-left: 125em;" >
+    <input type="button"  id="updateStudent" value="Update Student" style="border-radius: 12px; background-color: forestgreen; padding: 0.5em; color: white; margin-left: 125em;" >
     </form>
-    
     </div>
+  
     
     
         
