--- a/angularapp1/src/app/course/course.component.html
+++ b/angularapp1/src/app/course/course.component.html
@@ -71,3 +71,6 @@
         </div>
         </div>
     </form>
+    <div class="button" style="text-align:center;">
+      <button>Add Course</button>
+    </div>
