--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -15,63 +15,16 @@
 <div class="basic-2">
 
 
-<div class="team-member" id="userInstituteGrid1">
+<div class="team-member" id="userInstituteGrid1" *ngFor="let ins of institutes;  let i=index;">
   <div class="image-wrapper">
       <img class="img-fluid" src="https://static.wixstatic.com/media/e86a17_3824e91988d94def9292e660ba9010fd~mv2.jpg/v1/fill/w_1150,h_500,al_c,q_85,usm_0.66_1.00_0.01/2.webp" alt="alternative">
   </div> 
-  <p class="p-large">Rk Institute</p>
-  <p class="job-title">Place: Chennai</p>
+  <p class="p-large">{{ins.instituteName}}</p>
   
+  <p class="p-large">{{ins.mobileNumber}}</p>
+  <p class="p-large">{{ins.email}}</p>
+  <p class="job-title">{{ins.instituteAddress}}</p>
 </div>
-<div class="team-member" id="userInstituteGrid2">
-  <div class="image-wrapper">
-      <img class="img-fluid" src="https://www.aceec.ac.in/wp-content/uploads/2020/12/ACE-Engineering-CollegeA-Block-1109x500-1.jpg" alt="alternative">
-  </div>
-  <p class="p-large">Sk Institute</p>
-  <p class="job-title">Place: Banglore</p>
-  
-</div> 
-<div class="team-member" id="userInstituteGrid3">
-  <div class="image-wrapper">
-      <img class="img-fluid" src="https://i.pinimg.com/600x315/09/9a/85/099a8583e75cfa7da88c4b8ae166376c.jpg" alt="alternative">
-  </div>
-  <p class="p-large">RMS Institute</p>
-  <p class="job-title">Place: Coimbatore</p>
-  
-</div>
-<div class="team-member" id="userInstituteGrid4">
-  <div class="image-wrapper">
-      <img class="img-fluid" src="https://i.pinimg.com/600x315/09/9a/85/099a8583e75cfa7da88c4b8ae166376c.jpg" alt="alternative">
-  </div> 
-  <p class="p-large">D Y Patil College of Engineering</p>
-  <p class="job-title">Place: Pune</p>
- 
-</div>
-
-<div class="team-member" id="userInstituteGrid4">
-    <div class="image-wrapper">
-        <img class="img-fluid" src="https://i.pinimg.com/600x315/09/9a/85/099a8583e75cfa7da88c4b8ae166376c.jpg" alt="alternative">
-    </div> 
-    <p class="p-large">D Y Patil College of Engineering</p>
-    <p class="job-title">Place: Pune</p>
-   
-  </div>
-  <div class="team-member" id="userInstituteGrid4">
-    <div class="image-wrapper">
-        <img class="img-fluid" src="https://i.pinimg.com/600x315/09/9a/85/099a8583e75cfa7da88c4b8ae166376c.jpg" alt="alternative">
-    </div> 
-    <p class="p-large">D Y Patil College of Engineering</p>
-    <p class="job-title">Place: Pune</p>
-   
-  </div>
-  <div class="team-member" id="userInstituteGrid4">
-    <div class="image-wrapper">
-        <img class="img-fluid" src="https://i.pinimg.com/600x315/09/9a/85/099a8583e75cfa7da88c4b8ae166376c.jpg" alt="alternative">
-    </div> 
-    <p class="p-large">D Y Patil College of Engineering</p>
-    <p class="job-title">Place: Pune</p>
-   
-  </div>
 
 </div>
   
